--- a/views/newPassword.ejs
+++ b/views/newPassword.ejs
@@ -21,8 +21,8 @@
     <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
      <div class="dropdown">
      <div class="icons">
-    <i class="fas fa-search" id="search-btn"></i>
-    <i class="fas fa-user" id="login-btn"></i>
+    <!-- <i class="fas fa-search" id="search-btn"></i>
+    <i class="fas fa-user" id="login-btn"></i> -->
      </div> 
     </div>
 
