--- a/views/setNewPass.ejs
+++ b/views/setNewPass.ejs
@@ -21,8 +21,8 @@
         <div id="menu-bar" class="fas fa-bars"></div>    
         <a style="text-decoration: none;" href="/" class="logo"><span>لـ</span>قمة عيش</a>
         <div class="icons">
-            <i class="fas fa-search" id="search-btn"></i>
-            <i class="fas fa-user" id="login-btn"></i>
+            <!-- <i class="fas fa-search" id="search-btn"></i>
+            <i class="fas fa-user" id="login-btn"></i> -->
         </div>
     <div class='div1'>
     </div>
