--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,6 @@ margin-left: 10vw !important;
   font-family: 'Nunito', sans-serif;
   margin:0; padding:0;
   box-sizing: border-box;
-  text-transform: capitalize;
   outline: none; border:none;
   text-decoration: none;
   transition: all .5s linear;
@@ -169,7 +168,7 @@ header .logo span{
   color:var(--orange);
 }
 
-header .icons i{
+header .icons >*{
   font-size: 2.5rem;
   color:#fff;
   cursor: pointer;
