--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -20,7 +20,7 @@
      <div class="dropdown">
      <div class="icons">
     <i class="fas fa-search" id="search-btn"></i>
-    <i class="fas fa-user" id="login-btn"></i>
+    <a href = "/user" class="fas fa-user" id="login-btn"></a>
      </div> 
     </div>
 
