--- a/views/resHomePage.ejs
+++ b/views/resHomePage.ejs
@@ -43,9 +43,9 @@
             <form action="/meal/m1" method="POST">
             <i class="fas fa-utensils"></i>
             <h3>وجبات رئيسية</h3>
-           <input name="discription1" type='text' placeholder=<%= resdata[0].discription  %>><br><br>
+           <input name="discription1" type='text' placeholder="مجدرة,اوزي,..."><br><br>
           <label> الكمية: </label>
-            <label name="quantity1" type="number" placeholder="0"><%= resdata[0].quantity  %></label><br>
+            <label name="quantity1" type="number" placeholder="0"></label><br>
             <button href="#services" class="btn"> حفظ التعديلات </button>
             </form>
         </div>
