--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,3 @@
-
 :root{
   --orange:#ffa500;
 }
@@ -61,6 +60,13 @@ h7{
   color:#333;
   font-family: 'Vazirmatn', sans-serif;
 }
+
+.col-md-12 label,.col-md-12 input, .col-md-12 label{
+  font-family: 'IBM Plex Sans Arabic', sans-serif;
+  font-family: 'Vazirmatn', sans-serif;
+
+}
+/* .col-md-12 input{  padding: 10px; } */
 .btnnn{
   position: absolute;
   bottom: 0;
@@ -616,7 +622,7 @@ header .navbar a:hover{
   border-radius: .5rem;
 }
 
-.review .box img{
+.review .box img {
   height:13rem;
   width:13rem;
   border-radius: 50%;
@@ -776,4 +782,3 @@ align-items: center;
   }
 
 }
-
