--- a/views/EditProfilePage.ejs
+++ b/views/EditProfilePage.ejs
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@200&family=Vazirmatn:wght@100;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/style.css">
 </head>
 <body style="  background-color: #ffc153;">
@@ -26,9 +29,23 @@
 
 </header>
 
-<div class="container rounded bg-white col-md-6">
-    <div class="row" >
-        <div class="col-md-5 border-right">
+<div style="height: 70vh; margin-top: 20vh;display: flex;" class="container rounded bg-white col-md-6">
+    <div class=""style="width:23vw">
+            <div class="">
+                <form action = "/profile/edit/?_method=PUT" method = "POST">
+                    <div class="col-md-12"><label style="font-family: 'Vazirmatn', sans-serif;"class="labels">الاسم  :  </label><input style="width:12vw" class="p-4" name = "name" type="text"placeholder="  أدخل اسمك" value=""><br><br></div>
+                    <div class="col-md-12"><label class="labels">الايميل  :  </label><input style="width:12vw" class="p-3" name = "email" type="text"  placeholder="أدخل ايميلك" value=""><br><br></div>
+                    <div class="col-md-12"><label class="labels">رقم الهاتف  :  </label><input style="width:12vw" class="p-3" name = "phone" type="text"  placeholder="أدخل رقم هاتفك " value=""><br><br></div>
+                    <div class="col-md-12"><label class="labels">الموقع الالكتروني  :  </label><input class="p-3" style="width:12vw" name = "website" type="text" placeholder="أدخل الموقع الالكتروني" value=""><br><br></div>
+                    <div class="col-md-12"><label class="labels">الموقع  :  </label><input style="width:12vw" class="p-3" name = "location" type="text" placeholder="أدخل موقعك" value=""></div>
+            
+                    <div class="mt-2 "><button style="margin-right:0" class="btn btn-primary profile-button" type="submit">حفظ التعديلات</button></div>
+                </form>
+            </div>
+
+
+    </div>        
+    <div class=""style="margin-top:15vh;width:10vw;margin-left:5vw;">
                 <div class="profile-img">
                     <img src="imags/download.png" alt=""/>
                     <div class="file btn btn-lg btn-primary">
@@ -37,21 +54,7 @@
                     </div>
             </div>
         </div>
-        <div class="col-md-5 border-right">
-            <div class="p-3 py-5">
-                <div class="row mt-5">
-                    <form action = "/profile/edit/?_method=PUT" method = "POST">
-                    <div class="col-md-12"><label class="labels">الاسم  :  </label><input name = "name" type="text"placeholder="  أدخل اسمك" value=""><br><br></div>
-                    <div class="col-md-12"><label class="labels">الايميل  :  </label><input name = "email" type="text"  placeholder="  أدخل ايميلك" value=""><br><br></div>
-                    <div class="col-md-12"><label class="labels">رقم الهاتف  :  </label><input name = "phone" type="text"  placeholder="    أدخل رقم هاتفك " value=""><br><br></div>
-                    <div class="col-md-12"><label class="labels">الموقع الالكتروني  :  </label><input name = "website" type="text" placeholder="  أدخل الموقع الالكتروني" value=""><br><br></div>
-                    <div class="col-md-12"><label class="labels">الموقع  :  </label><input name = "location" type="text" placeholder="  أدخل موقعك" value=""><br><br></div>
-                </div>
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="submit">حفظ التعديلات</button></div>
-                </form>
-            </div>
-        </div>
-    </div>
+        
 </div>
 
 </body>
