--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -10,9 +10,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@200&family=Vazirmatn:wght@100;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/style.css">
 </head>
-<body style="  background-color: #ffc153;">
+<body style="background-color: #ffc153;">
 <header>
     <div id="menu-bar" class="fas fa-bars"></div>
 
@@ -23,35 +25,31 @@
     <a href = "/user" class="fas fa-user" id="login-btn"></a>
      </div> 
     </div>
-
 </header>
 
-<div class="container rounded bg-white col-md-6">
-    <div class="row" >
-        <div class="col-md-5 border-right">
+<div style="height: 70vh; margin-top: 20vh;display: flex;" class="container rounded bg-white col-md-6">
+    <div class=""style="width:23vw">
+            <div class="">
+                <div class="col-md-12"><label style="font-family: 'Vazirmatn', sans-serif;"class="labels">الاسم  :  </label><label style="width:12vw" class="p-4"value="">  <%=  data[0].name %>   </label><br><br></div>
+                <div class="col-md-12"><label class="labels">الايميل  :  </label><label style="width:12vw" class="p-3" > <%=  data[0].email %> </label><br><br></div>
+                <div class="col-md-12"><label class="labels">رقم الهاتف  :  </label><label style="width:12vw" class="p-3" > <%=  data[0].phone %> </label><br><br></div>
+                <div class="col-md-12"><label class="labels">الموقع الالكتروني  :  </label><label class="p-3" > <%=  data[0].website %> </label><br><br></div>
+                <div class="col-md-12"><label class="labels">الموقع  :  </label><label style="width:12vw" class="p-3" > <%=  data[0].location %> </label></div>
+            </div>
+            <form action="/edit" method = "POST">
+                <div class="mt-2"><button style="margin-right:0" class="btn btn-primary profile-button" type="submit">تعديل الملف الشخصي</button></div>
+            </form>
+    </div>        
+    <div class=""style="margin-top:15vh;width:10vw;margin-left:5vw;">
                 <div class="profile-img">
                     <img src="imags/download.png" alt=""/>
                     <div class="file btn btn-lg btn-primary">
-                                 تعديل الصورة
+                               
                         <input type="file" name="file"/>
                     </div>
             </div>
-        </div>
-        <div class="col-md-5 border-right">
-            <div class="p-3 py-5">
-                <div class="row mt-5">
-                    <div class="col-md-12"><label class="labels">الاسم  :  </label><label id = "name" class = "labels"> <%=  data[0].name %>   </label><br><br></div>
-                    <div class="col-md-12"><label class="labels">الايميل  :  </label><label id = "email" class = "labels"> <%=  data[0].email %></label><br><br></div>
-                    <div class="col-md-12"><label class="labels">رقم الهاتف  :  </label><label id = "phone" class = "labels"> <%=  data[0].phone %></label><br><br></div>
-                    <div class="col-md-12"><label class="labels">الموقع الالكتروني  :  </label><label id = "website" class = "labels"> <%=  data[0].website %></label><br><br></div>
-                    <div class="col-md-12"><label class="labels">الموقع  :  </label><label id = "location" class = "labels"><%=  data[0].location %> </label><br><br></div>
-                </div>
-                <form action="/edit" method = "POST">
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="submit">تعديل الملف الشخصي</button></div>
-                </form>
-            </div>
-        </div>
     </div>
+        
 </div>
 
 </body>
