edit on resHomePage
Co-Authored-By: Karam R. Hazza <77400199+william94411@users.noreply.github.com>
Co-Authored-By: abrarhannoon <92648528+abrarhannoon@users.noreply.github.com>

--- a/views/charHomePage.ejs
+++ b/views/charHomePage.ejs
@@ -16,7 +16,7 @@
 <header>
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a style="text-decoration: none;" href="/" class="logo"><span>لـ</span>قمة عيش</a>
+    <a style="text-decoration: none;" href="/charity" class="logo"><span>لـ</span>قمة عيش</a>
         <nav class="navbar">
         <a style="text-decoration: none;" href="#packages">المطاعم</a>
         <a style="text-decoration: none;" href="#services">العروضات</a>
