--- a/views/charHomePage.ejs
+++ b/views/charHomePage.ejs
@@ -22,6 +22,7 @@
         <a style="text-decoration: none;" href="#services">العروضات</a>
         <a style="text-decoration: none;" href="#book">حجز</a>
         <a style="text-decoration: none;" href="/changePassword">تغيير كلمة المرور</a>
+        <a style="text-decoration: none;" href="/DeleteAcount">الغاء العضوية</a>
     </nav>
      <div class="dropdown">
      <div class="icons">
