--- a/views/resHomePage.ejs
+++ b/views/resHomePage.ejs
@@ -22,6 +22,7 @@
         <a style="text-decoration: none;" href="#services">قائمة الطعام</a>
         <a style="text-decoration: none;" href="#book">الحجوزات</a>
         <a style="text-decoration: none;" href="/changePassword">تغيير كلمة المرور</a>
+        <a style="text-decoration: none;" href="/DeleteAcount">الغاء العضوية</a>
     </nav>
      <div class="dropdown">
      <div class="icons">
