--- a/views/DeleteAcount.ejs
+++ b/views/DeleteAcount.ejs
@@ -38,8 +38,8 @@
         <!-- <i class="fas fa-times" id="form-close"></i> -->
     
         <form  action="/deleteacount/delete?_method=DELETE" method="POST">
-            <h3> حذف حسابك</h3><br>
-            <h1 style="text-align:center ;">هل انت متأكد من حذف الحساب</h1><br>
+            <p style="color: black; font-family:'Times New Roman', Times, serif;font-size:xx-large"> حذف حسابك</p><br>
+            <h1  style="font-family: Simplified Arabic ,'Vazirmatn', sans-serif; text-align:center; size:14px";class="labels">هل انت متأكد من حذف الحساب؟</h1><br>
             <input type="submit" value="تأكيد" class="btn">
         </form>
     
