--- a/views/resHomePage.ejs
+++ b/views/resHomePage.ejs
@@ -114,8 +114,8 @@
         <% 
             if(resdata.length > 0 ){
                 resdata.forEach((item) => { %>
-                    <div  class="box x 6">
-                            <form action="/meal/delete_order?_method=DELETE" method="POST">
+                    <div  class="box x 6">   
+                            <form action="/meal/delete_order/<%= item.id %>?_method=DELETE" method="POST">
                                 <i class="fas fa-utensils"></i><br>
                                 <label> اسم الجمعية :  <%= item.name %>  </label><br>
                                 <label > نوع الوجبة: <%= item.category %></label><br>
