--- a/views/charHomePage.ejs
+++ b/views/charHomePage.ejs
@@ -66,7 +66,9 @@
                             <i class="far fa-star"></i>
                         </div>
                         <br><br><br><br>
-                        <a href="#services" class="btn">  تفقد المطعم </a>
+                        <form action="/search" method="POST">
+                            <button href="#services" class="btn">  تفقد المطعم </button>
+                        </form>
                     </div>
                 </div>
                 <% 
@@ -80,74 +82,6 @@
 </section>
 
 <!-- packages section ends -->
-
-<!-- services section starts  -->
-
-<section class="services" id="services">
-
-    <h1 class="heading">
-        <span id='resturant'>مطعم كان يا ما كان</span>
-        
-    </h1>
-
-    <div class="box-container">
-
-        <div class="box x 1">
-            <i class="fas fa-utensils"></i>
-            <h3>وجبات رئيسية</h3>
-           <input type='text' placeholder="بيتزا,جاج,....الخ">
-          <p> : الكمية</p>
-            <input type="number" placeholder="0">
-            <a href="#services" class="btn"> حجز </a>
-
-        </div>
-        <div class="box x 2">
-            <i class="fas fa-utensils"></i>
-            <h3>ساندويشات</h3>
-            <input type='text' placeholder='شاورما,كباب,بطاطا ,.....الخ'>
-            <p> : الكمية</p>
-            <input type="number" placeholder="0">
-            <a href="#services" class="btn"> حجز </a>
-        </div>
-        <div class="box x 3">
-            <i class="fas fa-utensils"></i>
-            <h3>عصائر</h3>
-             <input type='text' placeholder="عصير برتقال, عصير مانجا,... الخ">
-            <p> : الكمية</p>
-            <input type="number" placeholder="0">
-            <a href="#services" class="btn"> حجز </a>
-        </div>
-        <div class="box x 4">
-            <i class="fas fa-utensils"></i>
-            <h3>حلويات</h3>
-             <input type='text' placeholder='كيك, دونات,...الخ'>
-            <p> : الكمية</p>
-            <input type="number" placeholder="0">
-            <a href="#services" class="btn"> حجز </a>
-        </div>
-        <div class="box x 5">
-            <i class="fas fa-utensils"></i>
-            <h3>شوربات</h3>
-             <input type='text' placeholder='شوربة عدس, شوربة فريكية,...الخ'>
-            <p> : الكمية</p>
-            <input type="number" placeholder="0">
-            <a href="#services" class="btn"> حجز </a>
-        </div>
-        <div class="box x 6">
-            <i class="fas fa-utensils"></i>
-            <h3>وجبات سريعة</h3>
-             <input type='text' placeholder='بطاطا, برجر,....الخ'>
-            <p> : الكمية</p>
-            <input type="number" placeholder="0">
-            <a href="#services" class="btn"> حجز </a>
-        </div>
-        
-
-    </div>
-
-</section>
-
-<!-- services section ends -->
 
 <!-- book section starts  -->
 
