--- a/views/resHomePage.ejs
+++ b/views/resHomePage.ejs
@@ -23,6 +23,9 @@
         <a style="text-decoration: none;" href="#book">الحجوزات</a>
         <a style="text-decoration: none;" href="/changePassword">تغيير كلمة المرور</a>
         <a style="text-decoration: none;" href="/DeleteAcount">الغاء العضوية</a>
+        <a style="text-decoration: none;" href="/logout">تسجيل الخروج</a>
+
+        
     </nav>
      <div class="dropdown">
      <div class="icons">
