Show error messages in cases of wrong entry and show instructions to the user for ease

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,32 +18,27 @@
     <link rel="stylesheet" href="/style.css">
     </head>
 <body>
-<header>
-    <div id="menu-bar" class="fas fa-bars"></div>
-    <a href="/" class="logo"><span>لـ</span>قمة عيش</a>
-</header>
+    <header>
+        <a style="text-decoration: none;" href="/" class="logo"><span>لـ</span>قمة عيش</a>
+    </header>
 
-<section class="home" id="home"style="background-color:#fff;">
-     <div class="container"style="background-color:#fff; width:100vw;">
-         <div class="div1">
-            <h5>مرحبا بكم في موقعنا</h5>
-            <h6>لقمة عيش</h6>
-            <p>موقع لقمة عيش، هو موقع يتيح التواصل بين الجمعيات والمطاعم <br>من اجل ادارة فائض الطعام اليومي في المطاعم ،حيث يتم الترتيب بين <br>الجمعيات والمطاعم لتنسيق الوقت لاخذ هذا الطعام وتوزيعه على من <br>هم بحاجة اليه من قبل الجمعيات</p>
-            <br><br><br>
-            <h7>الرجاء تسجيل الدخول للمتابعة</h7>
-            <a href="/Login">تسحيل الدخول الآن</a>
-            <br>
-            <h7>للتواصل</h7>
-            <a href="/contactUs">اضغط هنا</a>
-         </div>
-         <div class="div2">
-              <img src="luqma.png" class="d-block w-100" alt="...">
-         </div>
-         
-         
-     </div>
-
-</section>
+    <section class="home" id="home"style="background-color:#fff;">
+        <div class="container"style="background-color:#fff; width:100vw;">
+            <div class="div1">
+                <h5>مرحبا بكم في موقعنا</h5>
+                <h6>لقمة عيش</h6>
+                <p>موقع لقمة عيش، هو موقع يتيح التواصل بين الجمعيات والمطاعم <br>من اجل ادارة فائض الطعام اليومي في المطاعم ،حيث يتم الترتيب بين <br>الجمعيات والمطاعم لتنسيق الوقت لاخذ هذا الطعام وتوزيعه على من <br>هم بحاجة اليه من قبل الجمعيات</p>
+                <br><br><br>
+                <h7>الرجاء تسجيل الدخول للمتابعة</h7>
+                <a href="/Login">تسحيل الدخول الآن</a><br>
+                <h7>للتواصل</h7>
+                <a href="/contactUs">اضغط هنا</a>
+            </div>
+            <div class="div2">
+                <img src="luqma.png" class="d-block w-100" alt="...">
+            </div> 
+        </div>
+    </section>
 
 </body>
 </html>
